cabal-version:      3.4
name:               Charon
version:            0.0.0.0
-- synopsis:
-- description:
license:            GPL-2.0-only
license-file:       LICENSE
author:             Niko
-- maintainer:
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common config
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

executable Charon
    import:           config
    main-is:          Main.hs
    hs-source-dirs:   src
    other-modules:
                      Desc.Parser
                      Generator
    -- other-extensions:
    build-depends:    base
                      , containers
                      , mtl
                      , lens
                      , parsec
                      , directory
